testing
Z:\Desktop\work-addin>npm fund
work-addin@1.0.0
+-- https://github.com/sponsors/broofa
|   `-- uuid@10.0.0
+-- https://github.com/sponsors/RubenVerborgh
|   `-- follow-redirects@1.15.6
+-- https://github.com/sponsors/ljharb
|   `-- qs@6.11.0, side-channel@1.0.6, call-bind@1.0.7, function-bind@1.1.2, define-data-property@1.1.4, gopd@1.0.1, has-property-descriptors@1.0.2, get-intrinsic@1.2.4, has-proto@1.0.3, has-symbols@1.0.3, object-inspect@1.13.2, resolve@1.22.8, is-core-module@2.14.0, supports-preserve-symlinks-flag@1.0.0, minimist@1.2.8
+-- https://github.com/sponsors/feross
|   `-- safe-buffer@5.2.1
+-- https://github.com/sponsors/sindresorhus
|   `-- import-local@3.1.0, ansi-escapes@4.3.2, type-fest@0.21.3, make-dir@4.0.0, p-limit@3.1.0, yocto-queue@0.1.0, get-stream@6.0.1, is-stream@2.0.1, onetime@5.1.2, parse-json@5.2.0, strip-json-comments@3.1.1, camelcase@6.3.0
+-- https://github.com/chalk/chalk?sponsor=1
| | `-- chalk@4.1.2
| `-- https://github.com/chalk/ansi-styles?sponsor=1
|     `-- ansi-styles@4.3.0, ansi-styles@5.2.0
+-- https://github.com/sponsors/sibiraj-s
|   `-- ci-info@3.9.0
+-- https://github.com/sponsors/isaacs
|   `-- glob@7.2.3
+-- https://opencollective.com/babel
| | `-- @babel/core@7.24.7
| `-- https://opencollective.com/browserslist
|     `-- browserslist@4.23.1, caniuse-lite@1.0.30001638, update-browserslist-db@1.0.16
+-- https://github.com/chalk/supports-color?sponsor=1
|   `-- supports-color@8.1.1
+-- https://github.com/sindresorhus/execa?sponsor=1
|   `-- execa@5.1.1
+-- https://github.com/sponsors/dubzzz
|   `-- pure-rand@6.1.0
+-- https://github.com/sponsors/jonschlinkert
|   `-- picomatch@2.3.1
+-- https://github.com/sindresorhus/emittery?sponsor=1
|   `-- emittery@0.13.1
`-- https://github.com/chalk/wrap-ansi?sponsor=1
    `-- wrap-ansi@7.0.0


Z:\Desktop\work-addin>npm install jest --save -dev
npm WARN config dev Please use --include=dev instead.

up to date in 3s

46 packages are looking for funding
  run `npm fund` for details

Z:\Desktop\work-addin>npm install --save-dev jest
npm WARN idealTree Removing dependencies.jest in favor of devDependencies.jest

up to date in 2s

46 packages are looking for funding
  run `npm fund` for details

Z:\Desktop\work-addin>npm fund
work-addin@1.0.0
+-- https://github.com/sponsors/broofa
|   `-- uuid@10.0.0
+-- https://github.com/sponsors/RubenVerborgh
|   `-- follow-redirects@1.15.6
+-- https://github.com/sponsors/ljharb
|   `-- qs@6.11.0, side-channel@1.0.6, call-bind@1.0.7, function-bind@1.1.2, define-data-property@1.1.4, gopd@1.0.1, has-property-descriptors@1.0.2, get-intrinsic@1.2.4, has-proto@1.0.3, has-symbols@1.0.3, object-inspect@1.13.2, minimist@1.2.8, resolve@1.22.8, is-core-module@2.14.0, supports-preserve-symlinks-flag@1.0.0
+-- https://github.com/sponsors/feross
|   `-- safe-buffer@5.2.1
+-- https://github.com/sponsors/sindresorhus
|   `-- import-local@3.1.0, ansi-escapes@4.3.2, type-fest@0.21.3, make-dir@4.0.0, p-limit@3.1.0, yocto-queue@0.1.0, get-stream@6.0.1, is-stream@2.0.1, onetime@5.1.2, parse-json@5.2.0, strip-json-comments@3.1.1, camelcase@6.3.0
+-- https://github.com/chalk/chalk?sponsor=1
| | `-- chalk@4.1.2
| `-- https://github.com/chalk/ansi-styles?sponsor=1
|     `-- ansi-styles@4.3.0, ansi-styles@5.2.0
+-- https://github.com/sponsors/sibiraj-s
|   `-- ci-info@3.9.0
+-- https://github.com/sponsors/isaacs
|   `-- glob@7.2.3
+-- https://opencollective.com/babel
| | `-- @babel/core@7.24.7
| `-- https://opencollective.com/browserslist
|     `-- browserslist@4.23.1, caniuse-lite@1.0.30001638, update-browserslist-db@1.0.16
+-- https://github.com/chalk/supports-color?sponsor=1
|   `-- supports-color@8.1.1
+-- https://github.com/sindresorhus/execa?sponsor=1
|   `-- execa@5.1.1
+-- https://github.com/sponsors/dubzzz
|   `-- pure-rand@6.1.0
+-- https://github.com/sponsors/jonschlinkert
|   `-- picomatch@2.3.1
+-- https://github.com/sindresorhus/emittery?sponsor=1
|   `-- emittery@0.13.1
`-- https://github.com/chalk/wrap-ansi?sponsor=1
    `-- wrap-ansi@7.0.0


Z:\Desktop\work-addin>npm test

> work-addin@1.0.0 test
> echo "Error: no test specified" && exit 1

"Error: no test specified"

Z:\Desktop\work-addin>npm test

> work-addin@1.0.0 test
> jest

 FAIL  ./upload.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    \\fwus454ns.ny.fw.gs.com\kinrak_newyork_firmwide\home\Desktop\work-addin\upload.test.js:10
    import fs from 'fs';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      at Runtime.createScriptFromCode (Z:/Desktop/work-addin/node_modules/jest-runtime/build/index.js:1505:14)

 FAIL  ./PostData.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    \\fwus454ns.ny.fw.gs.com\kinrak_newyork_firmwide\home\Desktop\work-addin\PostData.test.js:10
    import fs from 'fs';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      at Runtime.createScriptFromCode (Z:/Desktop/work-addin/node_modules/jest-runtime/build/index.js:1505:14)

 FAIL  ./Controller.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    \\fwus454ns.ny.fw.gs.com\kinrak_newyork_firmwide\home\Desktop\work-addin\Controller.test.js:12
    import fs from 'fs';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      at Runtime.createScriptFromCode (Z:/Desktop/work-addin/node_modules/jest-runtime/build/index.js:1505:14)

Test Suites: 3 failed, 3 total
Tests:       0 total
Snapshots:   0 total
Time:        21.036 s
Ran all test suites.
